    Changed the z-index of the `setProgressState(true)` throbber so it does not hide notifications #TINY-6686
    Changed the type signature for `editor.selection.getRng()` incorrectly returning `null` #TINY-6843
    Changed some `SaxParser` regular expressions to improve performance #TINY-6823
    Changed `editor.setProgressState(true)` to close any open popups #TINY-6686
    Fixed `col` elements incorrectly transformed to `th` elements when converting columns to header columns #TINY-6715
    Fixed a number of table operations not working when selecting 2 table cells on Mozilla Firefox #TINY-3897
    Fixed a memory leak by backporting an upstream Sizzle fix #TINY-6859
    Fixed table width style was removed when copying #TINY-6664
    Fixed focus lost while typing in the `charmap` or `emoticons` dialogs when the editor is rendered in a shadow root #TINY-6904
    Fixed base64 URLs used in style attributes were corrupted when parsing HTML #TINY-6828
    Fixed the order of CSS precedence of `content_style` and `content_css` in the `preview` and `template` plugins. `content_style` now has precedence #TINY-6529
    Fixed an issue where the image dialog tried to calculate image dimensions for an empty image URL #TINY-6611
    Fixed an issue where `scope` attributes on table cells would not change as expected when merging or unmerging cells #TINY-6486
    Fixed the plugin documentation links in the `help` plugin #DOC-703
    Fixed events bound using `DOMUtils` not returning the correct result for `isDefaultPrevented` in some cases #TINY-6834
    Fixed the "Dropped file type is not supported" notification incorrectly showing when using an inline editor #TINY-6834
    Fixed an issue with external styles bleeding into TinyMCE #TINY-6735
    Fixed an issue where parsing malformed comments could cause an infinite loop #TINY-6864
    Fixed incorrect return types on `editor.selection.moveToBookmark` #TINY-6504